Fix color contrast of tertiary Button underline

--- a/packages/circuit-ui/components/Button/base.module.css
+++ b/packages/circuit-ui/components/Button/base.module.css
@@ -313,7 +313,7 @@
   bottom: 0;
   width: 100%;
   content: "";
-  border-top: var(--cui-border-width-kilo) dashed var(--cui-border-normal);
+  border-top: var(--cui-border-width-kilo) dashed var(--cui-fg-subtle);
   opacity: 1;
   transition: transform var(--cui-transitions-default),
     opacity var(--cui-transitions-default);
